sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.error
AlgCocktailSort2:20: error: ';' expected but integer literal found.
      }debut+=1
              ^